[FIX] Change spinner to gif so that works on IE8.

--- a/questionnaire/static/css/application.css
+++ b/questionnaire/static/css/application.css
@@ -261,41 +261,10 @@ form input[type=file]{
     overflow: auto;
 }
 .spinner {
-  opacity: 0;
-  -webkit-animation: spinner 1s infinite linear;
-  -moz-animation: spinner 1s infinite linear;
-  -o-animation: spinner 1s infinite linear;
-  animation: spinner 1s infinite linear;
-  -webkit-transform-origin: 50% 58%;
-  transform-origin:50% 58%;
-  -ms-transform-origin:50% 58%; /* IE 9 */
+  display: none;
 }
-
-@-moz-keyframes spinner {
-  from {
-    -moz-transform: rotate(0deg);
-  }
-  to {
-    -moz-transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes spinner {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spinner {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spinner-image{
+   height: 20px;
 }
 
 .has-spinner.active {
@@ -303,13 +272,8 @@ form input[type=file]{
 }
 
 .has-spinner.active .spinner {
-  opacity: 1;
-  max-width: 50px; /* More than it will ever come, notice that this affects on animation duration */
+    display: inline-block;
 }
 .has-spinner.active .glyphicon-file {
     display: none;
-}
-.form-content{
-    overflow: hidden;
-    padding-left: 20px;
 }
